# nixwrap

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-pages.yml  publish-pypi-index.yml  publish-pypi.yml  update-manifests.yml
nixwrap-index/: pyproject.toml
nixwrap-index/src/nixwrap_index/: __init__.py
src/nixwrap/: __init__.py  backend.py  cli.py  index.py  patcher.py
src/nixwrap_core/: __init__.py  backend.py  index.py  runtime.py
tools/: build_index.py  generate_manifests.py  generate_stubs.py
tools/manifests/: bat.json  fd.json  ripgrep.json
tools/manifests/aarch64-linux/: age.json  atuin.json  bat.json  bottom.json  broot.json  btop.json  delta.json  difftastic.json  duf.json  dust.json  entr.json  eza.json  fd.json  fzf.json  gdu.json  gh.json  gitui.json  glab.json  grex.json  helix.json  hexyl.json  hyperfine.json  jq.json  just.json  lazygit.json  lf.json  mcfly.json  minisign.json  ncdu.json  nnn.json  nushell.json  procs.json  pv.json  rclone.json  restic.json  ripgrep.json  sd.json  sops.json  starship.json  tealdeer.json  (+10 more)
tools/manifests/x86_64-linux/: age.json  atuin.json  bottom.json  broot.json  btop.json  delta.json  difftastic.json  duf.json  dust.json  entr.json  eza.json  fd.json  fzf.json  gdu.json  gh.json  gitui.json  glab.json  grex.json  helix.json  hexyl.json  hyperfine.json  jq.json  just.json  lazygit.json  lf.json  mcfly.json  minisign.json  ncdu.json  nnn.json  nushell.json  procs.json  pv.json  rclone.json  restic.json  ripgrep.json  sd.json  sops.json  starship.json  tealdeer.json  tokei.json  (+9 more)
