[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nixwrap"
version = "0.7.0"
description = "Run Nix packages from Python without Nix installed"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = ["nixwrap-index"]  # Required for CLI and build backend

[project.optional-dependencies]
dev = [
    "build>=1.0",
    "pytest>=8.0",
]

[project.scripts]
nixwrap = "nixwrap.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nixwrap"]

[tool.hatch.build.targets.sdist]
include = [
    "src/nixwrap",
    "README.md",
    "pyproject.toml",
]
